--- a/index.html
+++ b/index.html
@@ -4,23 +4,44 @@
 <head>
     <meta charset="utf-8" />
     <title>Gridlocked</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/canvas.css">
     <style>
         * {
             padding: 0;
             margin: 0;
         }
 
-        canvas {
-            background: #eee;
-            display: block;
-            margin: 0 auto;
-        }
+       
     </style>
 </head>
 
 <body>
-    <canvas id="myCanvas" width="720" height="480"></canvas>
- 
-    <script src="./src/scripts/canvasBoard.js"></script>
+    <div id="background">
+        <canvas id="myCanvas" width="720" height="480"></canvas>
+    
+        <script src="./src/scripts/canvasBoard.js" id="grid"></script>
+        <script src="./dist/main.js"></script>
+    </div>
+</body>
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./dist/main.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div id="app"></div>
     <script src="./dist/main.js"></script>
 </body>
+
+</html> -->
