Cleaning out classes.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="background">
         <canvas id="myCanvas"></canvas>
         
-        <div id="app"></div>
+        <!-- <div id="app"></div> -->
 
         <!-- <script>
             const SCALE = 1.5;
